# finguard

./: .env.template  .gitignore  CLAUDE_INSTRUCTIONS.md  GAME_PLAN.md  README.md  SETUP_COMPLETE.md  STREAMLIT_README.md  launch_ui.sh  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: settings.json
.claude/commands/: review.md
.streamlit/: config.toml
config/: benchmark_config.yaml  dataset_config.yaml  embedding_config.yaml  training_config.yaml
models/: rf_classifier_v1.pkl
outputs/metrics/: classification_report.json
scripts/: run_full_pipeline.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase3_5.py  run_phase4.py  run_phase5.py
src/analysis/: drift_detection.py  drift_visualization.py
src/benchmarks/: llm_judge.py
src/classifier/: random_forest_classifier.py
src/dataset/: generator.py  loader.py  validator.py
src/demo/: cli_demo.py
src/embeddings/: base.py  cache.py  openai_embedder.py  sentence_transformer_embedder.py
src/utils/: config.py  logger.py  metrics.py  validation.py
src/visualization/: plotter.py  umap_projection.py
tests/: conftest.py
tests/test_utils/: test_validation.py
